css/jetpack-admin-rtl.css
/* ... */
@media (max-width: 530px) {
  .table-bordered.jetpack-modules tr.jetpack-module td .row-actions {
    display: none;
  }
}
@media (max-width: 782px) {
  .table-bordered.jetpack-modules tr.jetpack-module td .row-actions {
    display: block;
    padding-right: 10px;
    visibility: visible;
  }
}
.table-bordered.jetpack-modules > thead > tr > th {
  border: 0;
  vertical-align: middle;
}
.table-bordered.jetpack-modules > thead > tr > th:last-child {
  padding-left: 0;
}
@media (max-width: 782px) {
  .table-bordered.jetpack-modules > thead > tr > th:last-child {
    padding-right: 0;
  }
}
.table-bordered.jetpack-modules td {
  background: #fff;
}
.table-bordered.jetpack-modules #doaction {
  margin-top: 0;
}
@media (max-width: 782px) {
  .table-bordered.jetpack-modules #doaction {
    padding: 10px 7px;
  }
}
.table-bordered.jetpack-modules .checkall {
  margin-top: 1px;
}
.table-bordered.jetpack-modules .filter-search {
  margin-top: 8px;
}
.table-bordered.jetpack-modules .genericon {
  color: #999;
  display: none;
  margin: 7px 3px 0;
}
@media (max-width: 900px) {
  .table-bordered.jetpack-modules .genericon {
    display: inline-block;
  }
}
.table-bordered.jetpack-modules .med {
  width: 70px;
}
.table-bordered.jetpack-modules .sm {
  width: 30px;
}
@media (max-width: 782px) {
  .table-bordered.jetpack-modules .check-column {
    width: 50px;
  }
}

.fixed-top .check-column {
  padding: 8px 10px 0 10px;
  width: 2.2em;
}

.wrap {
  margin: 0;
  padding: 0 1.5em 1em;
  overflow: hidden;
}
.wrap h2 {
  font-size: 24px;
  font-weight: 400;
}
.wrap .manage-left {
  float: right;
  margin: 0;
  padding: 0;
  width: 63%;
}
.wrap .manage-left table {
  width: 100%;
}
.wrap .manage-left th {
  font-weight: 400;
}
@media (max-width: 782px) {
  .wrap .manage-left {
    width: 100%;
  }
}
.wrap .manage-right {
  margin: 0;
  padding: 0;
  /*position: absolute;
  right: 0;*/
  float: left;
  width: 35%;
  z-index: 1;
}
.wrap .manage-right p {
  font-size: 12px;
  font-weight: bold;
  color: #bbb;
  padding-top: 2px;
  text-transform: uppercase;
  letter-spacing: 1px;
  clear: right;
}
.wrap .manage-right .bumper {
  margin-right: 33px;
}
.wrap .manage-right.show {
  display: block;
  position: fixed;
  overflow-y: auto;
  overflow-x: hidden;
  position: absolute;
}
.wrap .manage-right .search-bar {
  margin-bottom: 18px;
  max-width: 300px;
}
.wrap .manage-right p.search-box {
  float: none;
  height: auto;
  margin-bottom: 0;
  position: relative;
}
.wrap .manage-right p.search-box input[type='search'] {
  padding: 0 8px;
  width: 90%;
  line-height: initial;
}
@media (max-width: 782px) {
  .wrap .manage-right p.search-box input[type='search'] {
    float: right;
    padding: 9px 8px;
  }
}
.wrap .manage-left p.search-box input[type="submit"] {
  display: none;
}
.wrap .manage-right .button-group .button {
  outline: none;
}
.wrap .manage-right .subsubsub {
  margin: 0;
  padding: 0;
}
.wrap .manage-right .subsubsub a {
  padding: 0;
  line-height: inherit;
}
.wrap .manage-right .subsubsub .current {
  padding: 1px 5px;
  border-radius: 2px;
  margin-right: -5px;
  background: #0D72B2;
  color: #FFF;
}
.wrap .manage-right .subsubsub .current .count {
  color: #BCD7E7;
  font-weight: 200;
}
.wrap .manage-right .subsubsub li {
  display: block;
  text-align: right;
}
@media (max-width: 782px) {
  .wrap .manage-right {
    background: #fff;
    bottom: 0;
    display: none;
    min-width: 300px;
    position: fixed;
    left: 0;
    top: 0;
    z-index: 13;
    box-shadow: 0 1px 20px 5px rgba(0, 0, 0, 0.1);
  }
  .wrap .manage-right .bumper {
    margin: 13px;
  }
  .wrap .manage-right .navbar-form {
    margin: 0;
    padding: 0;
  }
}

/* 'Pages' is a temporary location for these styles, until we can break them up into their proper atmoic locations */
.configure-module p {
  font-size: 14px;
}
.configure-module p.success, .configure-module p.error {
  color: #fff;
  padding: 10px;
}
.configure-module p.success {
  background-color: #81a844;
}
.configure-module p.error {
  background-color: #d94f4f;
}

.protect-status p {
  font-size: 16px;
}
.protect-status strong {
  display: inline-block;
  margin-top: 10px;
  background: #fff;
  padding: 10px;
  border: 1px #ddd solid;
  font-size: 16px;
  color: #000;
  max-width: 100%;
}
.protect-status.attn {
  color: #d94f4f;
}
.protect-status.working {
  color: #81a844;
}

/* Whitelisting */
#non-editable-whitelist {
  margin-top: 15px;
}

.protect-whitelist textarea {
  width: 100%;
  min-height: 150px;
}

#editable-whitelist .whitelist-table {
  width: 100%;
}

/* btns + inputs */
.configure-module input[disabled] {
  opacity: .5;
}
.configure-module input.button-primary {
  font-weight: bold;
}

/* whitelist table */
.whitelist-table {
  border-top: 1px solid;
  border-left: 1px solid;
  border-color: #ddd;
  background-color: #fff;
}
.whitelist-table td, .whitelist-table th {
  padding: 10px;
  margin: 0;
  border-bottom: 1px solid;
  border-right: 1px solid;
  border-color: #ddd;
  font-size: 14px;
}
.whitelist-table th.heading {
  font-weight: bold;
  color: #5d6d74;
  text-align: right;
  background-color: #eee;
}
.whitelist-table td.item-actions {
  border-right: none;
  text-align: left;
}
.whitelist-table .toolbar {
  padding: 0;
}
.whitelist-table .add-btn {
  text-align: center;
  width: 10%;
  border-right: 1px #ddd solid;
}

.ip-address, .enter-ip {
  width: 90%;
  text-align: right;
  vertical-align: middle;
}

.delete-ip-address {
  text-align: center;
  border: 0;
  background: transparent;
  color: #6f7476;
  box-shadow: none;
  font-size: 20px;
  margin: 0;
  padding: 0;
  cursor: pointer;
  border-radius: 2px;
}
.delete-ip-address:hover {
  background: #eee;
}

.toolbar div {
  float: right;
  padding: 10px;
}

@media only screen and (min-width: 1100px) {
  #non-editable-whitelist {
    width: 28%;
    float: left;
    margin-top: 0;
  }

  .protect-whitelist {
    width: 65%;
    float: right;
  }
}
/* ... */

